# speak-to-me

./: .env.example  .gitignore  README.md  STATUS.md  pre_plugin_mypy_disabled.sh  pre_plugin_ruff.sh  precommit.sh  pyproject.toml  speak_me.txt
docs/: gemini_multimodal_live.md  speech_to_text_v2_chirp.md
experiments/: chirp_speech_recognition.py  gemini_31_flash_lite_audio_out.py  gemini_3_text_then_25_tts.py  gemini_audio_native_modality.py  gemini_audio_server.py  gemini_live_audio.py  standard_tts.py  text_to_audio.sh
