[project]
name = "speak-to-me"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "google-genai",
    "google-cloud-speech",
    "google-cloud-texttospeech",
    "dotenv>=0.9.9",
    "sounddevice",
    "numpy",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy"
]

[project.scripts]
speak = "experiments.gemini_live_audio:main"
speaks = "experiments.gemini_live_audio:speak_only_main"
speakf = "experiments.gemini_live_audio:speak_file_main"
speakme = "experiments.gemini_live_audio:speak_file_speak_me"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["experiments"]